--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,8 @@ authors = ["Pierre Abbat <phma@bezitopo.org>"]
 
 [deps]
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 OffsetArrays = "1.17.0"
+StaticArrays = "1.9.15"
