--- a/Project.toml
+++ b/Project.toml
@@ -10,3 +10,6 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 [compat]
 OffsetArrays = "1.17.0"
 StaticArrays = "1.9.15"
+
+[workspace]
+projects = ["test"]
