--- a/Project.toml
+++ b/Project.toml
@@ -3,13 +3,15 @@ uuid = "2d00372c-c190-492a-867f-43c797d38eeb"
 version = "0.1.0"
 authors = ["Pierre Abbat <phma@bezitopo.org>"]
 
+[workspace]
+projects = ["test"]
+
 [deps]
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 OffsetArrays = "1.17.0"
+Printf = "1.11.0"
 StaticArrays = "1.9.15"
-
-[workspace]
-projects = ["test"]
